# multiVIB

./: README.md  pyproject.toml  requirements.txt
doc/tutorial/: 01_vertical_integration_test.ipynb  02_multimodal_integration.ipynb  03_cross_species_integration.ipynb
multivib/: __init__.py  layers.py  losses.py  models.py  module.py  multiVIB.py  multiVIB_horizontal.py  training.py  utils.py
