[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "multiVIB"
authors = [{name = "Yang Xu"}]
version = "0.1.0"
license = { file = "LICENSE" }
description = "A unified probabilistic contrastive learning framework for multi-omics integration"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["single cell", "multiomics", "deep learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "torch==2.8.0",
    "scanpy",
]

[project.urls]
Homepage = "http://github.com/broadinstitute/multiVIB"
Documentation = "http://github.com/broadinstitute/multiVIB"
